--- a/app/view/user/new_user_view.phtml
+++ b/app/view/user/new_user_view.phtml
@@ -9,7 +9,12 @@
     <option value="F">Feminino</option>        
 </select><br>
 <label for="email">E-mail</label><br>
-<input type="email" name="email" id="email"><br>
+<!-- campo de email -->
+<input onblur="verifyEmail(this);" type="email" name="email" id="email">
+<!-- loader: mostra um gif de carregamento -->
+<img id="loader" src="">
+
+<br>
 <label for="password">Senha</label><br>
 <input type="password" name="password" id="password"><br> <!-- don't show the password -->
 
@@ -18,3 +23,22 @@
 
 <input type="submit" name="command" value="Salvar">
 </form>
+
+<script src="core/vendor/jquery-3.4.1.min.js"></script>
+<script>
+    function verifyEmail(email){        
+        $("#loader").attr('src','');
+        if(email.value != ''){
+            $("#loader").attr('src','core/icon/loading.gif');
+            url = "http://localhost/cash_flow/Request.php?class=UserCtr&method=emailExists&email=" + email.value;
+            $.getJSON(url, function(data){
+                if(data == false)
+                    $("#loader").attr('src','core/icon/checked.png');
+                else{
+                    $("#loader").attr('src','core/icon/warning.png');
+                    email.focus();
+                }
+            });
+        }
+    }
+</script>
